Fixed more ui animations and transitions inside the game. Removed sticky notes and other extra features since you have to scroll down to see it on mobile anyway so why not have the same experience with mobile and desktop users. Also fixed a bug in the AI making stupid decisions. I was wondering why even master seemed stupid. Then I check the availablemove Objects and check and saw score was 0 which I traced to a conditional statement not working as intended

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ body{
 	font-family: 'Reenie Beanie', cursive;
 }
 
+
 .fa-margin-right{
 	margin-right: 5px;
 }
@@ -49,6 +50,7 @@ body{
 	float:right;
 	padding-right: 15px;
 	color:#000;
+	font-size:18px;
 }
 
 .right-status:hover{
@@ -57,6 +59,7 @@ body{
 
 .left-status{
 	padding-left:15px;
+	font-size:18px;
 }
 
 .header-row{
@@ -102,7 +105,7 @@ body{
 
 
 /* Post-it Notes */
-
+/*
 .post-it-section{
 	margin-top:35px;
 }
@@ -141,7 +144,7 @@ body{
 .scoreboard{
 	font-size:30px;
 }
-
+*/
 
 /*	Modal Dialog	*/
 
@@ -193,5 +196,11 @@ body{
 
 .marker{
 	font-family: 'Permanent Marker', cursive;
+	opacity:.7;
+	color:#83F52C;
+	font-size:50px;
 }
 
+.marker-buttons{
+	font-family: 'Permanent Marker', cursive;
+}
